[package]
name = "terra_da"
version = "0.1.0"
authors = ["Charlie2x4 <charlie2x4@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw20-base ={version = "1.0.1", features = ["library"]}
cw-storage-plus = "1.0.1"
thiserror = { version = "1.0.31" }
cw20 = "1.0.1"
cosmwasm-std = { version = "1.1" }
cosmwasm-storage = { version = "1.0.1" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
cosmwasm-schema = { version = "1.1.9" }

[dev-dependencies]
#terra-cosmwasm = "2.2.0"
#cw-multi-test = { version = "0.6.1" }
